--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,8 @@
             <!-- Menu -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    @if (User.Identity != null && User.Identity.IsAuthenticated)
+                    {
                     <!-- Admin -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,19 +52,26 @@
                             <li><a class="dropdown-item" href="@Url.Action("AdministrarUsuarios","Admin")">Usuarios</a></li>
                         </ul>
                     </li>
+                    }
 
+                    
                     <!-- Catálogo -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="catalogoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-boxes me-1"></i>Catálogo
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="catalogoDropdown">
+                            @if (User.Identity != null && User.Identity.IsAuthenticated)
+                            {
                             <li><a class="dropdown-item" href="@Url.Action("AdministrarCategorias","Catalogo")">Administrar Categorias</a></li>
                             <li><a class="dropdown-item" href="@Url.Action("AdministrarPlatos","Catalogo")">Administrar Platos</a></li>
+                            }
                             <li><a class="dropdown-item" href="@Url.Action("Menu","Catalogo")">Menu</a></li>
                         </ul>
                     </li>
-
+                    }
+                    @if (User.Identity != null && User.Identity.IsAuthenticated)
+                    {
                     <!-- Envío -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="envioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -75,7 +84,6 @@
                             <li><a class="dropdown-item" href="@Url.Action("VisualizarRetroalimentaciones","Envio")">Ver Retroalimentacion</a></li>
                         </ul>
                     </li>
-
                     <!-- Información -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,15 +104,15 @@
                             <li><a class="dropdown-item" href="@Url.Action("HistorialPagosPedidosAdministracion","Pago")">Historial de Pagos Administracion</a></li>
                         </ul>
                     </li>
-
+                    }
                     <!-- Pedido -->
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Carrito", "Pedido")" id="pedidoDropdown" role="button">
                             <i class="fas fa-clipboard-list me-1"></i>Carrito
                         </a>
                     </li>
-
-
+                    @if (User.Identity != null && User.Identity.IsAuthenticated)
+                    {
                     <!-- Reporte -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="reporteDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -114,17 +122,28 @@
                             <li><a class="dropdown-item" href="@Url.Action("AdministracionReportes","Reporte")"> Reportes </a></li>
                         </ul>
                     </li>
-
+                    }
+                    @if (User.Identity != null && User.Identity.IsAuthenticated)
+                    {
                     <!-- Mi Usuario -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="usuarioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user me-1"></i>Bienvenido, @userName
+                            <i class="fas fa-user me-1"></i>Bienvenido @userName
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="usuarioDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="usuarioDropdown">                     
                             <li><a class="dropdown-item" href="@Url.Action("GestionPerfil","Usuario")">Gestion Perfil</a></li>
                             <li><a class="dropdown-item" href="/Usuario/Logout">Cerrar Sesión</a></li>
                         </ul>
                     </li>
+                    } else
+                    {
+                        <!-- Menú para usuario no autenticado -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("AccionesUsuario", "Usuario")">
+                                <i class="fas fa-user me-1"></i> Iniciar Sesión
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
