--- a/Views/Shared/_LayoutExterno.cshtml
+++ b/Views/Shared/_LayoutExterno.cshtml
@@ -30,12 +30,15 @@
             </button>
 
             <!-- Menu -->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-
-             
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="catalogoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-boxes me-1"></i>Menu
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="catalogoDropdown">
+                    <li><a class="dropdown-item" href="@Url.Action("Menu","Catalogo")">Visualizar Menu</a></li>
                 </ul>
-            </div>
+            </li>
+
         </div>
     </nav>
 
